<resources>
    <string name="app_name">Dibbitz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="dibbit_title_hint">Put Dibbit Title Here</string>
    <string name="dibbit_title_label">Title</string>
    <string name="dibbit_done_label">Is it done yet?</string>
    <string name="dibbit_date_time_label">Date and Time</string>
    <string name="dibbit_description_label">Description:</string>
    <string name="dibbit_description_hint">Tell me more about it</string>
    <string name="dibbit_location_label">Location:</string>
    <string name="dibbit_location_hint">Where is it?</string>
    <string name="dibbit_difficulty_label">Difficulty:</string>
    <string name="date_picker_title">Date of dibbit:</string>
    <string name="time_picker_title">Time of dibbit:</string>
    <string name="dialog_editDate">Date</string>
    <string name="dialog_editTime">Time</string>
    <string name="dialog_editDateOrTime">Do you want to edit the date or time?</string>
    <string name="new_dibbit">New Dibbit</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s dibbits</string>
    <string name="delete_dibbit">Delete Dibbit</string>
    <string name="empty_dibbit_list_label"> No Dibbits Here</string>
    <string name="view_list_label">LIST</string>
    <string name="view_map_label">MAP</string>
    <string name="title_activity_map">Map</string>



    <plurals name="subtitle_plural">
        <item quantity="one">%1$s dibbit</item>
        <item quantity="other">%1$s dibbit</item>
    </plurals>



    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="camera_img">Camera Image</string>


    <string name="save_to_cal_label">Save to Calendar</string>
    <string name="save_to_map_label">Save to Map</string>

    <string name="remove_from_map_label">Remove from Map</string>
    <string name="remove_from_cal_label">Remove from Calendar</string>
    <string name="logout_label">Log Out</string>
</resources>
