<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--<include layout="@layout/view_camera_and_title"/>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="horizontal">-->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dibbit_photo"
                    android:scaleType="centerInside"
                    android:background="@android:color/darker_gray"
                    android:cropToPadding="true"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dibbit_camera"
                    android:src="@android:drawable/ic_menu_camera"/>
            </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dibbit_title_label"
                style="?android:listSeparatorTextViewStyle"/>

        <EditText android:id="@+id/dibbit_title"
                android:hint="@string/dibbit_title_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
    </LinearLayout>


    <!--</LinearLayout>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/dibbit_date_time_label"
        style="?android:listSeparatorTextViewStyle"/>

    <Button android:id="@+id/dibbit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />


    <Button android:id="@+id/dibbit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/dibbit_location_label"/>

        <EditText android:id="@+id/dibbit_location_text"
                  android:hint="@string/dibbit_location_hint"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dibbit_difficulty_label"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dibbit_difficulty_ratingBar"/>

    </LinearLayout>

    <CheckBox android:id="@+id/dibbit_done"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/dibbit_done_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dibbit_description_label"
        style="?android:listSeparatorTextViewStyle"/>


    <EditText android:id="@+id/dibbit_description"
              android:hint="@string/dibbit_description_hint"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"/>





</LinearLayout>
